force-app/main/default/objects/EinsteinGPTConfig__c/EinsteinGPTConfig__c.object-meta.xml
<CustomObject>
    <label>EinsteinGPTConfig</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EinsteinGPTConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>