force-app/main/default/objects/EinsteinGPTConfig__c/fields/AI_avatar_Image__c.field-meta.xml
<CustomField>
    <fullName>AI_avatar_Image__c</fullName>
    <label>AI avatar Image</label>
    <type>Url</type>
</CustomField>