force-app/main/default/objects/EinsteinGPTConfig__c/fields/Default_record_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_record_ID__c</fullName>
    <defaultValue>$User.Id</defaultValue>
    <label>Default record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>