force-app/main/default/objects/EinsteinGPTConfig__c/fields/Enable_OpenAI__c.field-meta.xml
<CustomField>
    <fullName>Enable_OpenAI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When no response are available the response will be generated by openAI</description>
    <inlineHelpText>When no response are available the response will be generated by openAI. Requires an API-KEY</inlineHelpText>
    <label>Enable OpenAI</label>
    <type>Checkbox</type>
</CustomField>