force-app/main/default/objects/EinsteinGPTConfig__c/fields/Initial_message__c.field-meta.xml
<CustomField>
    <fullName>Initial_message__c</fullName>
    <description>First message of the AI</description>
    <inlineHelpText>First message of the AI</inlineHelpText>
    <label>Initial message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>