force-app/main/default/objects/EinsteinGPTConfig__c/fields/Input_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Input_Placeholder__c</fullName>
    <defaultValue>&quot;Type your message&quot;</defaultValue>
    <description>The text shown on the user input when input is empty</description>
    <inlineHelpText>The text shown on the user input when input is empty</inlineHelpText>
    <label>Input Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>