force-app/main/default/objects/EinsteinGPTConfig__c/fields/Message_source_type__c.field-meta.xml
<CustomField>
    <fullName>Message_source_type__c</fullName>
    <description>Define the sources of the assistant predefined messages</description>
    <inlineHelpText>Define the sources of the assistant predefined messages.</inlineHelpText>
    <label>Message source type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic responses</fullName>
                <default>true</default>
                <label>Basic responses</label>
            </value>
            <value>
                <fullName>Scenario by keyword</fullName>
            </value>
            <value>
                <fullName>Scenario by ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>