force-app/main/default/objects/EinsteinGPTConfig__c/fields/OpenAPI_key__c.field-meta.xml
<CustomField>
    <fullName>OpenAPI_key__c</fullName>
    <description>Can be generated on openAI: https://platform.openai.com/account/api-keys</description>
    <inlineHelpText>Can be generated on openAI: https://platform.openai.com/account/api-keys</inlineHelpText>
    <label>OpenAPI key</label>
    <length>250</length>
    <type>Text</type>
</CustomField>