force-app/main/default/objects/EinsteinGPTConfig__c/fields/openApi_version__c.field-meta.xml
<CustomField>
    <fullName>openApi_version__c</fullName>
    <inlineHelpText>Version of openAPI (be careful gpt-4 will be much more slower)</inlineHelpText>
    <label>openAPI version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>text-davinci-003</fullName>
                <default>true</default>
                <label>text-davinci-003</label>
            </value>
            <value>
                <fullName>gpt-4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>