force-app/main/default/objects/EinsteinGPTConfig__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <label>Prompt</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>