force-app/main/default/objects/EinsteinGPTConfig__c/fields/Response_1__c.field-meta.xml
<CustomField>
    <fullName>Response_1__c</fullName>
    <label>Response 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>