force-app/main/default/objects/EinsteinGPTConfig__c/fields/Response_2__c.field-meta.xml
<CustomField>
    <fullName>Response_2__c</fullName>
    <label>Response 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>