force-app/main/default/objects/EinsteinGPTConfig__c/fields/Response_3__c.field-meta.xml
<CustomField>
    <fullName>Response_3__c</fullName>
    <label>Response 3</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>