force-app/main/default/objects/EinsteinGPTConfig__c/fields/styleFooterBorderTop__c.field-meta.xml
<CustomField>
    <fullName>styleFooterBorderTop__c</fullName>
    <defaultValue>&quot;3px solid #f3eeee&quot;</defaultValue>
    <inlineHelpText>The top border of the footer (container of the input)</inlineHelpText>
    <label>Footer border</label>
    <length>100</length>
    <type>Text</type>
</CustomField>