force-app/main/default/objects/EinsteinGPTConfig__c/fields/StyleHeaderColor__c.field-meta.xml
<CustomField>
    <fullName>StyleHeaderColor__c</fullName>
    <defaultValue>&quot;white&quot;</defaultValue>
    <label>Header text color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>