force-app/main/default/objects/EinsteinGPTConfig__c/fields/styleHeaderHide__c.field-meta.xml
<CustomField>
    <fullName>styleHeaderHide__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Hide the chat header if true</inlineHelpText>
    <label>Hide header</label>
    <type>Checkbox</type>
</CustomField>