force-app/main/default/objects/EinsteinGPTConfig__c/fields/styleInboxBorder__c.field-meta.xml
<CustomField>
    <fullName>styleInboxBorder__c</fullName>
    <defaultValue>&quot;1px solid #ccc&quot;</defaultValue>
    <inlineHelpText>Border of the input</inlineHelpText>
    <label>Inbox border</label>
    <length>100</length>
    <type>Text</type>
</CustomField>