force-app/main/default/objects/EinsteinGPTConfig__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <defaultValue>&quot;Einstein GPT&quot;</defaultValue>
    <inlineHelpText>The title shown on the top of the assistant area</inlineHelpText>
    <label>Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>