force-app/main/default/objects/EinsteinGPTConfig__c/fields/User_Avatar_Image__c.field-meta.xml
<CustomField>
    <fullName>User_Avatar_Image__c</fullName>
    <inlineHelpText>URL to the user avatar</inlineHelpText>
    <label>User Avatar Image</label>
    <type>Url</type>
</CustomField>