force-app/main/default/objects/EinsteinGPTConfig__c/fields/Word_by_word_Max__c.field-meta.xml
<CustomField>
    <fullName>Word_by_word_Max__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Word by word (Max)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>