force-app/main/default/objects/EinsteinGPTConfig__c/fields/Word_by_word_Min__c.field-meta.xml
<CustomField>
    <fullName>Word_by_word_Min__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Word by word (Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>