force-app/main/default/objects/EinsteinGPTConfig__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Message_source_type__c</columns>
    <columns>Enable_OpenAI__c</columns>
    <columns>OpenAPI_key__c</columns>
    <columns>Title__c</columns>
    <columns>Initial_message__c</columns>
    <columns>Response_1__c</columns>
    <columns>Response_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>